<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.shared.PichangaListAdapter" >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/pichangaImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/organizer_team" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/pichangaDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center">

            <TextView
                android:id="@+id/pichangaOrganizerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organizer_team" />

            <TextView
                android:id="@+id/pichangaDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/pichangaPlaceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/detailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_text"
                    tools:ignore="TouchTargetSizeCheck"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/joinButton"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinToPichanga"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>
